Add colors group in config.ini, modify code according to new color group in config.ini

--- a/main/config.ini
+++ b/main/config.ini
@@ -4,5 +4,8 @@ screen_width = 1920
 screen_height = 1030
 FPS = 60
 title = Swords
+
+[Colors]
+#Section for defined colors in Hex code
 red = #FF0000
 green = #00FF00
