--- a/main/config.ini
+++ b/main/config.ini
@@ -30,3 +30,5 @@ max_hp_added = 10
 light_attack_multiplier = 0.5
 medium_attack_multiplier = 1.0
 heavy_attack_multiplier = 1.5
+equal_block_attack_attack_chance = 625
+one_point_of_difference = 50
