Add FightSettings in config.ini

--- a/main/config.ini
+++ b/main/config.ini
@@ -11,3 +11,8 @@ red = #FF0000
 green = #00FF00
 white = #FFFFFF
 orange = #F1A41D
+
+[FightSettings]
+# Section for fight settings
+equal_block_attack_attack_chance = 625
+one_point_of_difference = 50
