Add function of blocking and selectiong chance draw

--- a/main/config.ini
+++ b/main/config.ini
@@ -31,4 +31,4 @@ light_attack_multiplier = 0.5
 medium_attack_multiplier = 1.0
 heavy_attack_multiplier = 1.5
 equal_block_attack_attack_chance = 625
-one_point_of_difference = 50
+one_point_difference_of_block_attack = 50
