Add function of blocking and selectiong chance draw

--- a/main/config.ini
+++ b/main/config.ini
@@ -15,4 +15,4 @@ orange = #F1A41D
 [FightSettings]
 # Section for fight settings
 equal_block_attack_attack_chance = 625
-one_point_of_difference = 50
+one_point_difference_of_block_attack = 50
