Add mechanic of blocking - draft, add variable in config.ini

--- a/main/config.ini
+++ b/main/config.ini
@@ -31,4 +31,5 @@ light_attack_multiplier = 0.5
 medium_attack_multiplier = 1.0
 heavy_attack_multiplier = 1.5
 equal_block_attack_attack_chance = 625
+difference_between_attack_strength = 125
 one_point_difference_of_block_attack = 50
