Add mechanic of blocking - draft, add variable in config.ini

--- a/main/config.ini
+++ b/main/config.ini
@@ -15,4 +15,5 @@ orange = #F1A41D
 [FightSettings]
 # Section for fight settings
 equal_block_attack_attack_chance = 625
+difference_between_attack_strength = 125
 one_point_difference_of_block_attack = 50
