Add typing in class Character, add reference to congif.ini in Character's __init__, refactor of colors name in config.ini, adapt changed colors name in bars in fight_module_gui

--- a/main/config.ini
+++ b/main/config.ini
@@ -7,10 +7,10 @@ title = Swords
 
 [Colors]
 #Section for defined colors in Hex code
-red = #FF0000
-green = #00FF00
-white = #FFFFFF
-orange = #F1A41D
+red_healthbar = #FF0000
+green_healthbar = #00FF00
+white_staminabar = #FFFFFF
+orange_staminabar = #F1A41D
 
 [Player Settings]
 #Player parameters:
@@ -33,3 +33,11 @@ heavy_attack_multiplier = 1.5
 equal_block_attack_attack_chance = 625
 difference_chance_between_attack_type = 125
 one_point_difference_of_block_attack = 50
+
+[CharacterSetting]
+#Section for constant values inside Character __init__
+init_stamina_value = 100
+init_max_stamina_value = 100
+lowest_stamina_value = 10
+regen_stamina_value = 15
+
