Adding Player settings to confing ini

--- a/main/config.ini
+++ b/main/config.ini
@@ -11,3 +11,14 @@ red = #FF0000
 green = #00FF00
 white = #FFFFFF
 orange = #F1A41D
+
+[Player Settings]
+#Player parameters:
+starting_exp_needed_for_next_level = 100
+starting_attribute_points = 10
+starting_money = 0
+backpack_size = 12
+
+#Player's "level_up" method attributes:
+exp_needed_multiplier = 1.2
+added_max_hp = 10
