--- a/main/config.ini
+++ b/main/config.ini
@@ -14,6 +14,8 @@ orange = #F1A41D
 
 [Player Settings]
 #Player parameters:
+starting_level = 0
+starting_experience = 0
 starting_exp_needed_for_next_level = 100
 starting_attribute_points = 10
 starting_money = 0
@@ -21,4 +23,4 @@ backpack_size = 12
 
 #Player's "level_up" method attributes:
 exp_needed_multiplier = 1.2
-added_max_hp = 10
+max_hp_added = 10
