add values of type attack multiplier to config.ini

--- a/main/config.ini
+++ b/main/config.ini
@@ -24,3 +24,9 @@ backpack_size = 12
 #Player's "level_up" method attributes:
 exp_needed_multiplier = 1.2
 max_hp_added = 10
+
+[FightSettings]
+# Section for fight settings
+light_attack_multiplier = 0.5
+medium_attack_multiplier = 1.0
+heavy_attack_multiplier = 1.5
