Add new colors to config.ini

--- a/main/config.ini
+++ b/main/config.ini
@@ -11,12 +11,12 @@ red_healthbar = #FF0000
 green_healthbar = #00FF00
 white_staminabar = #FFFFFF
 orange_staminabar = #F1A41D
+grey_armorbar = #787776
+white_armorbar = #FFFFFF
 button_default = #FFFFFF
 button_hovered = #0AA62E
 label_default = #FFC400
 label_set_default = #FFAE00
-
-
 
 [Player Settings]
 #Player parameters:
