Add to config.ini constans value (start_armor_points) from Character __init__

--- a/main/config.ini
+++ b/main/config.ini
@@ -39,6 +39,7 @@ strong_attack_multiplier = 1.5
 equal_block_attack_attack_chance = 625
 difference_chance_between_attack_type = 125
 one_point_difference_of_block_attack = 50
+start_armor_points = 100
 
 [CharacterSetting]
 #Section for constant values inside Character __init__
