--- a/main/config.ini
+++ b/main/config.ini
@@ -11,6 +11,11 @@ red_healthbar = #FF0000
 green_healthbar = #00FF00
 white_staminabar = #FFFFFF
 orange_staminabar = #F1A41D
+button_default = #FFFFFF
+button_hovered = #0AA62E
+label_default = #FFC400
+
+
 
 [Player Settings]
 #Player parameters:
