Create label_set. Add some example stuff do backpack

--- a/main/config.ini
+++ b/main/config.ini
@@ -14,6 +14,7 @@ orange_staminabar = #F1A41D
 button_default = #FFFFFF
 button_hovered = #0AA62E
 label_default = #FFC400
+label_set_default = #FFAE00
 
 
 
@@ -23,7 +24,7 @@ starting_level = 0
 starting_experience = 0
 starting_exp_needed_for_next_level = 100
 starting_attribute_points = 10
-starting_money = 0
+starting_money = 99
 backpack_size = 12
 
 #Player's "level_up" method attributes:
