--- a/main/config.ini
+++ b/main/config.ini
@@ -11,6 +11,12 @@ red_healthbar = #FF0000
 green_healthbar = #00FF00
 white_staminabar = #FFFFFF
 orange_staminabar = #F1A41D
+button_default = #FFFFFF
+button_hovered = #0AA62E
+label_default = #FFC400
+label_set_default = #FFAE00
+
+
 
 [Player Settings]
 #Player parameters:
@@ -18,7 +24,7 @@ starting_level = 0
 starting_experience = 0
 starting_exp_needed_for_next_level = 100
 starting_attribute_points = 10
-starting_money = 0
+starting_money = 99
 backpack_size = 12
 
 #Player's "level_up" method attributes:
